--- a/layout-2/index.html
+++ b/layout-2/index.html
@@ -253,5 +253,54 @@
 			</section>
 			<!-- End of articles -->
 		</section>
+        <!--Start of Footer -->
+        <div class="clearfix"></div>
+        <footer id="footer">
+            <div class="wrap">
+                <div id="menu-footer">
+                    <h5>MENU</h5>
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">TRAINING</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
+                <div id="location">
+                    <h5>where we are?</h5>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36526.232415504695!2d-73.59619332888465!3d45.54270100153449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91c0d04c267b1%3A0x1cc677ac9fbe265b!2sBiod%C3%B4me%20de%20Montreal!5e0!3m2!1ses-419!2smx!4v1730906802019!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="info">
+                    <h5>Developed with</h5>
+                    <p>
+                        <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Developed with HTML & CSS" />
+                    </p>
+                    <h5>Optimized for</h5>
+                    <p id="browsers">
+                        <a href="#">
+                            <img src="img/firefox-icon.png" alt="Firefox" title="Firefox" />
+                        </a>
+                        <a href="#">
+                            <img src="img/chrome.png" alt="Chrome" title="Chrome" />
+                        </a>
+                        <a href="#">
+                            <img src="img/Opera_256x256.png" alt="Opera" title="Opera" />
+                        </a>
+                        <a href="#">
+                            <img src="img/safari.png" alt="Safari" title="Safari" />
+                        </a>
+                        <a href="#">
+                            <img src="img/android.png" alt="Android" title="Android" />
+                        </a>
+                        <a href="#">
+                            <img src="img/ios.png" alt="Ios" title="Ios" />
+                        </a>
+                    </p>
+                    <h5>Author</h5>
+                    <p>&copy; Jatsodev - cemita.com</p>
+                </div>
+            </div>
+        </footer>
+        <!--End of Footer -->
 	</body>
 </html>
