--- a/layout-2/index.html
+++ b/layout-2/index.html
@@ -2,9 +2,11 @@
 <html lang="us">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, user-scalable= no" />
 		<title>Layout 2</title>
 		<link rel="icon" type="favicon/x-icon" href="img/supertux.png" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="css/responsive.css" />
 	</head>
 	<body>
 		<!-- Header start -->
@@ -71,6 +73,7 @@
 				<!-- Cards end -->
 			</section>
 			<!-- Aside start -->
+			<div class="clearfix"></div>
 			<aside id="aside">
 				<h3>SEARCH</h3>
 				<div id="search">
@@ -99,12 +102,21 @@
 				<div id="social" class="aside-box">
 					<div class="x">
 						<a href="#" class="icon">'</a>
+						<p class="overlay">
+							X
+						</p>
 					</div>
 					<div class="facebook">
 						<a href="#" class="icon">f</a>
+						<p class="overlay">
+							Facebook
+						</p>
 					</div>
 					<div class="youtube">
 						<a href="#" class="icon">y</a>
+						<p class="overlay">
+							You Tube
+						</p>
 					</div>
 				</div>
 				<h3>Sponsors</h3>
