sass and less completed

--- a/sass/index.html
+++ b/sass/index.html
@@ -8,5 +8,80 @@
     <body>
         <h1>Learning SASS </h1>
         <p>SASS rocks yeah!!!!!</p>
+
+        <div class="boxes">
+            <div class="box">
+                <h1>I'm a box</h1>
+                <p>I'm a paragraph</p>
+                <div class="info">
+                    18-04-2024
+                    <span class="author">
+                        Jatsodev
+                    </span>
+                </div>
+            </div>
+            <div class="box">
+                <h1>I'm a box</h1>
+                <p>I'm a paragraph</p>
+                <div class="info">
+                    18-04-2024
+                    <span class="author">
+                        Jatsodev
+                    </span>
+                </div>
+            </div>
+            <div class="box">
+                <h1>I'm a box</h1>
+                <p>I'm a paragraph</p>
+                <div class="info">
+                    18-04-2024
+                    <span class="author">
+                        Jatsodev
+                    </span>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        
+        <div class="list">
+            <ul>
+                <li>
+                    Sass
+                </li>
+                <li>
+                    LESS
+                </li>
+                <li>
+                    Stylus
+                </li>
+                <li>
+                    Sass
+                </li>
+                <li>
+                    LESS
+                </li>
+                <li>
+                    Stylus
+                </li>
+                <li>
+                    Sass
+                </li>
+                <li>
+                    LESS
+                </li>
+                <li>
+                    Stylus
+                </li>
+            </ul>
+        </div>
+        <div class="alert">
+            HI... I'm a normal alert
+        </div>
+        <div class="alert-danger">
+            HI... I'm a danger alert
+        </div>
+        <div class="alert-success">
+            HI... I'm a success alert
+        </div>
     </body>
 </html>
