--- a/css-grid/index.html
+++ b/css-grid/index.html
@@ -7,6 +7,45 @@
     </head>
     <body>
 
+        
+        <div id="website-areas">
+            <header id="header">
+                <h1>Website with areas</h1>
+            </header>
+            <nav id="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Page one</a></li>
+                    <li><a href="#">Page two</a></li>
+                    <li><a href="#">Page three</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <section id="content">
+                <article>
+                    Article one
+                </article>
+                <article>
+                    Article two
+                </article>
+                <article>
+                    Article three
+                </article>
+                <article>
+                    Article four
+                </article>
+                <article>
+                    Article five
+                </article>
+            </section>
+            <aside id="aside">
+                <h2>ASIDE</h2>
+            </aside>
+            <footer id="footer">
+                Master in CSS with Jatsodev &copy; cemita.com
+            </footer>
+        </div>
+        <hr/>
         <div id="website">
             <header id="header">
                 <h1>Web's title</h1>
