bosstrap col and row

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -17,7 +17,7 @@
 
         <div class="container border">
             <div class="row">
-                <header id="header" class="col-12 bg-primary text-white p-2">
+                <header id="header" class="col-12 bg-primary text-white p-2 ps-5">
                     <h1>Learning Bootstrap</h1> 
                 </header>
 
@@ -30,6 +30,147 @@
                         <li class="col">Contact</li>
                     </ul>
                 </nav>
+
+                <section id="content" class="col-12">
+                    <div class="row">
+                        <section id="products" class="col-9 border">
+                            <h2>Products</h2>
+                            <hr>
+                            <!-- <div class="items row">
+                                <div class="item col-3 bg-primary m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-warning m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-danger m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-primary m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-warning m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-danger m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-primary m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-warning m-3">
+                                    Product 
+                                </div>
+                                <div class="item col-3 bg-danger m-3">
+                                    Product 
+                                </div>
+                            </div> -->
+
+                            <div class="items">
+                                <div class="row">
+                                    <div class="item col bg-primary m-2">
+                                        Product 
+                                    </div>
+                                    <div class="item col bg-warning m-2">
+                                        Product 
+                                    </div>
+                                    <div class="item col bg-danger m-2">
+                                        Product 
+                                    </div>
+                                </div>
+
+                                <div class="row mt-5">
+                                    <div class="item col bg-primary m-2">
+                                        Product 
+                                    </div>
+                                    <div class="item col bg-warning m-2">
+                                        Product 
+                                    </div>
+                                    <div class="item col bg-danger m-2">
+                                        Product 
+                                    </div>
+                                    <div class="item col-5 bg-success m-2">
+                                        Product 
+                                    </div>
+                                </div>
+                                <!-- justify-content-start
+                                justify-content-center
+                                justify-content-end
+                                justify-content-between
+                                justify-content-around-->
+                                <div class="row mt-1 justify-content-around">
+                                    <div class="item col-3 bg-primary">
+                                        Product 
+                                    </div>
+                                    <div class="item col-3 bg-warning">
+                                        Product 
+                                    </div>
+                                    <div class="item col-3 bg-primary">
+                                        Product 
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="item col-2 bg-primary offset-1">
+                                        Product 
+                                    </div>
+                                    <div class="item col-2 bg-warning offset-1">
+                                        Product 
+                                    </div>
+                                    <div class="item col-2 bg-danger offset-1">
+                                        Product 
+                                    </div>
+                                    <div class="item col-2 bg-danger offset-1">
+                                        Product 
+                                    </div>
+                                </div>
+                                
+                            </div>
+
+                        </section>
+                        <aside class="col-3 border">
+                            <h2>Sidebar</h2>
+
+                            <!-- align-items-start
+                            align-items-end
+                            align-items-center -->
+                            <div class="aside row bg-light align-items-center">
+                                <!-- <div class="col-12 bg-primary ">
+                                    Element 1
+                                </div>
+                                <div class="col-12 bg-success">
+                                    Element 2
+                                </div>
+                                <div class="col-12 bg-warning">
+                                    Element 3
+                                </div> 
+                                <div class="col-4 bg-primary align-self-start ">
+                                    Element 1
+                                </div>
+                                <div class="col-4 bg-success align-self-center">
+                                    Element 2
+                                </div>
+                                <div class="col-4 bg-warning align-self-end">
+                                    Element 3
+                                </div>-->
+
+                                <div class="col-4 bg-primary  order-3">
+                                    Element 1
+                                </div>
+                                <div class="col-4 bg-success order-1">
+                                    Element 2
+                                </div>
+                                <div class="col-4 bg-warning order-2">
+                                    Element 3
+                                </div>
+                            </div>
+                        </aside>
+                    </div>
+                </section>
+
+                <footer class="col-lg-12 bg-info ">
+                    Master in CSS Jatso &copy;
+                </footer>
             </div>
         </div>
 
