--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -2,6 +2,7 @@
 <html lang="us">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Learning Bootstrap</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
@@ -15,25 +16,26 @@
             <button class="btn btn-success">Hi, I'm a button</button>
         </div> -->
 
+        <!-- container-fluid -->
         <div class="container border">
             <div class="row">
                 <header id="header" class="col-12 bg-primary text-white p-2 ps-5">
                     <h1>Learning Bootstrap</h1> 
                 </header>
 
-                <nav id="menu" class="col-12 bg-secondary text-white">
+                <nav id="menu" class="col-12 bg-secondary text-white d-none d-sm-none d-md-block">
                     <ul class="row w-50">
-                        <li class="col">Home</li>
-                        <li class="col">Page one</li>
-                        <li class="col">Page two</li>
-                        <li class="col">Page three</li>
-                        <li class="col">Contact</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Home</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Page one</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Page two</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Page three</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Contact</li>
                     </ul>
                 </nav>
 
                 <section id="content" class="col-12">
                     <div class="row">
-                        <section id="products" class="col-9 border">
+                        <section id="products" class="col-12 col-sm-12  col-md-9 border">
                             <h2>Products</h2>
                             <hr>
                             <!-- <div class="items row">
@@ -67,6 +69,19 @@
                             </div> -->
 
                             <div class="items">
+
+                                <div class="row">
+                                    <div class="item col col-lg col-md-12 col-sm-12 bg-primary">
+                                        Product 
+                                    </div>
+                                    <div class="item col col-lg col-md-6 col-sm-6 bg-warning">
+                                        Product 
+                                    </div>
+                                    <div class="item col col-lg col-md-6 col-sm-6 bg-danger">
+                                        Product 
+                                    </div>
+                                </div>
+
                                 <div class="row">
                                     <div class="item col bg-primary m-2">
                                         Product 
@@ -128,7 +143,7 @@
                             </div>
 
                         </section>
-                        <aside class="col-3 border">
+                        <aside class="col-3 border d-none d-sm-none d-md-block">
                             <h2>Sidebar</h2>
 
                             <!-- align-items-start
