--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="us">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Learning Bootstrap</title>
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-
         <!-- <div class="my-web w-75 m-auto p-5 border border-danger">
             <h1>Learning Bootstrap</h1>
             <h2>This is my Bootstrap's course with Victor Robles</h2>
@@ -19,11 +18,17 @@
         <!-- container-fluid -->
         <div class="container border">
             <div class="row">
-                <header id="header" class="col-12 bg-primary text-white p-2 ps-5">
-                    <h1>Learning Bootstrap</h1> 
+                <header
+                    id="header"
+                    class="col-12 bg-primary text-white p-2 ps-5"
+                >
+                    <h1>Learning Bootstrap</h1>
                 </header>
 
-                <nav id="menu" class="col-12 bg-secondary text-white d-none d-sm-none d-md-block">
+                <nav
+                    id="menu"
+                    class="col-12 bg-secondary text-white d-none d-sm-none d-md-block"
+                >
                     <ul class="row w-50">
                         <li class="col-xs-12 col-sm-12 col-md">Home</li>
                         <li class="col-xs-12 col-sm-12 col-md">Page one</li>
@@ -35,9 +40,12 @@
 
                 <section id="content" class="col-12">
                     <div class="row">
-                        <section id="products" class="col-12 col-sm-12  col-md-9 border">
+                        <section
+                            id="products"
+                            class="col-12 col-sm-12 col-md-9 border"
+                        >
                             <h2>Products</h2>
-                            <hr>
+                            <hr />
                             <!-- <div class="items row">
                                 <div class="item col-3 bg-primary m-3">
                                     Product 
@@ -69,43 +77,48 @@
                             </div> -->
 
                             <div class="items">
-
                                 <div class="row">
-                                    <div class="item col col-lg col-md-12 col-sm-12 bg-primary">
-                                        Product 
+                                    <div
+                                        class="item col col-lg col-md-12 col-sm-12 bg-primary"
+                                    >
+                                        Product
                                     </div>
-                                    <div class="item col col-lg col-md-6 col-sm-6 bg-warning">
-                                        Product 
+                                    <div
+                                        class="item col col-lg col-md-6 col-sm-6 bg-warning"
+                                    >
+                                        Product
                                     </div>
-                                    <div class="item col col-lg col-md-6 col-sm-6 bg-danger">
-                                        Product 
+                                    <div
+                                        class="item col col-lg col-md-6 col-sm-6 bg-danger"
+                                    >
+                                        Product
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="item col bg-primary m-2">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col bg-warning m-2">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col bg-danger m-2">
-                                        Product 
+                                        Product
                                     </div>
                                 </div>
 
                                 <div class="row mt-5">
                                     <div class="item col bg-primary m-2">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col bg-warning m-2">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col bg-danger m-2">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-5 bg-success m-2">
-                                        Product 
+                                        Product
                                     </div>
                                 </div>
                                 <!-- justify-content-start
@@ -115,33 +128,31 @@
                                 justify-content-around-->
                                 <div class="row mt-1 justify-content-around">
                                     <div class="item col-3 bg-primary">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-3 bg-warning">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-3 bg-primary">
-                                        Product 
+                                        Product
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="item col-2 bg-primary offset-1">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-2 bg-warning offset-1">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-2 bg-danger offset-1">
-                                        Product 
+                                        Product
                                     </div>
                                     <div class="item col-2 bg-danger offset-1">
-                                        Product 
+                                        Product
                                     </div>
                                 </div>
-                                
                             </div>
-
                         </section>
                         <aside class="col-3 border d-none d-sm-none d-md-block">
                             <h2>Sidebar</h2>
@@ -169,7 +180,7 @@
                                     Element 3
                                 </div>-->
 
-                                <div class="col-4 bg-primary  order-3">
+                                <div class="col-4 bg-primary order-3">
                                     Element 1
                                 </div>
                                 <div class="col-4 bg-success order-1">
@@ -183,17 +194,19 @@
                     </div>
                 </section>
 
-                <footer class="col-lg-12 bg-info ">
+                <footer class="col-lg-12 bg-info">
                     Master in CSS Jatso &copy;
                 </footer>
             </div>
         </div>
 
-
-        
-
-
-        <script type="text/javascript" src="jquery/jquery-3.7.1.min.js"></script>
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+        <script
+            type="text/javascript"
+            src="jquery/jquery-3.7.1.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="bootstrap/js/bootstrap.min.js"
+        ></script>
     </body>
 </html>
