--- a/bootstrap/components.html
+++ b/bootstrap/components.html
@@ -269,9 +269,9 @@
             </div>
 
             <!-- COLAPSE -->
-             <a class="btn btn-success mt-3" data-bs-toggle="collapse" href="#info" role="button" aria-expanded="false" aria-controls="info">
+            <a class="btn btn-success mt-3" data-bs-toggle="collapse" href="#info" role="button" aria-expanded="false" aria-controls="info">
                 Show information
-             </a>
+            </a>
 
              <div class="collapse" id="info">
                 <div class="card card-body bg-dark text-white mt-2">
@@ -307,19 +307,27 @@
              <h3>Form</h3>
              <form>
 
-                <div class="form-group">
+                <div class="mb-3">
                     <label>Name</label>
-                    <input type="text"/>
+                    <input type="text" class="form-control" placeholder="Type your name"/>
+                </div>
+
+                <div class="form-group">
+                    <label>Gender</label>
+                    <select class="form-control">
+                      <option>Woman</option>
+                      <option>Man</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="email">
+                    <input type="email" class="form-control" placeholder="Type your email">
                 </div>
 
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password">
+                    <input type="password" class="form-control" placeholder="Type your password">
                 </div>
 
                 <input type="submit" class="btn btn-success" value="Send"/>
